tests/errors/assertion.AssertionFailed.1.art
x: 2

ensure -> x = 2
ensure -> x < 2
print "done"